fix alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,43 +1,54 @@
-.chat-container {
-    display: grid;
-    grid-template-columns: 300px auto;
-    height: 98vh;
+* {
+    box-sizing: border-box;
+}
+
+body {
+    display: flex;
 }
 
 .user-list {
-    border: solid black;
-    text-align: center;
+    width: 25%;
 }
 
 .main-area {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     border: solid black;
+    width: 100%;
+    height: 98vh;
+    background: #63A396;
 }
-
-#form-container {
-    grid-row-start: 12;
-    display: grid;
-    margin: auto;
-    grid-template-columns: 3fr 1fr;
-    text-align: center;
-}
-
-.share_location {
-    display:block;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
-button:disabled {
-    cursor: not-allowed;
-    opacity: 0.5;
-}
-input {
-    height: 20px;
-}
-
 #messages {
-    list-style: none;
+    flex-grow:1;
 }
+#form-container {
+    display: flex;
+    border: solid black;
+    align-self: center;
+    vertical-align: bottom;
+    padding: 10px;
+    margin: 5px;
+    width: 100%;
+    background: grey;
+}
+
+#message-form {
+    width: 100%;
+    flex-grow: 1;
+}
+#share_location {
+    align-self: flex-end;
+}
+.message__title {
+    display: flex;
+    margin-bottom: 5px;
+  }
+  
+.message__title h4 {
+    font-weight: 600;
+    margin-right: 10px;
+  }
+
+  
